# the-dark-tower

./: .gitignore  ASCII.md  BIOMES.md  CLAUDE.md  Cargo.toml  EROSION.md  FEATURE_EVIDENCE.md  GEOMORPHOMETRY_REPORT.md  RENDERING.md  RIVERS.md  biome_debug.txt  biome_legend.txt  chronicle.txt  debug_255_128.txt  debug_255_128_v2.txt  debug_255_128_v3.txt  debug_255_128_v4.txt  debug_coast2.txt  debug_coast3.txt  debug_coastline.txt  debug_fixed.txt  debug_local.txt  debug_walk.txt  erosion_log.txt  legends.md  lore_narrative.txt  map2_legend.txt  map_legend.txt  task.md  world.txt
.opencode/plan/: todo.md
data/defaults/: backstory.json  culture_biases.json  naming_styles.json  races.json
docs/: TASK_HISTORY.md  debug_erosion.sh  glacial_erosion.md  numerical_tests.md  relistic_map_indicators.md
exports/: world_42_biomes.exr  world_42_heightmap.exr  world_42_normals.exr  world_42_occlusion.exr  world_42_rivers.exr
scripts/: generate_backstory.py  generate_mosaic.sh
src/: ascii.rs  biome_feathering.rs  biomes.rs  climate.rs  coastline.rs  explorer.rs  export.rs  exr_export.rs  grid_export.rs  heightmap.rs  lib.rs  main.rs  map_export.rs  menu.rs  microclimate.rs  scale.rs  seasons.rs  seeds.rs  test_synthetic.rs  tilemap.rs  tileset.rs  underground_water.rs  viewer.rs  water_bodies.rs  weather_zones.rs  world.rs  zlevel.rs
src/erosion/: geomorphometry.rs  glacial.rs  gpu.rs  hydraulic.rs  materials.rs  mod.rs  params.rs  river_geometry.rs  rivers.rs  utils.rs
src/history/: artifacts.rs  config.rs  dungeons.rs  evidence.rs  factions.rs  heroes.rs  mod.rs  (+7 more)
(+177 files in other folders)
