[package]
name = "planet_generator"
version = "0.1.0"
edition = "2021"
default-run = "planet_generator"

[lib]
name = "planet_generator"
path = "src/lib.rs"

[[bin]]
name = "planet_generator"
path = "src/main.rs"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
noise = "0.9"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
wgpu = "23"
pollster = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.29"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
